[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/kz_debugger/assets/tool.png" type="Texture" id=1]
[ext_resource path="res://addons/kz_debugger/assets/save.png" type="Texture" id=2]
[ext_resource path="res://addons/kz_debugger/assets/smaller.png" type="Texture" id=3]
[ext_resource path="res://addons/kz_debugger/assets/clean.png" type="Texture" id=4]
[ext_resource path="res://addons/kz_debugger/assets/refresh.png" type="Texture" id=5]
[ext_resource path="res://addons/kz_debugger/assets/settings.png" type="Texture" id=6]
[ext_resource path="res://addons/kz_debugger/assets/heart_1_size-removebg-preview.png" type="Texture" id=7]
[ext_resource path="res://addons/kz_debugger/scenes/UI/window/window.gd" type="Script" id=8]

[node name="WindowDialog" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 430.0
margin_top = 329.5
margin_right = 370.0
margin_bottom = -70.5
rect_min_size = Vector2( 500, 200 )
window_title = "console"
resizable = true
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="topBarCol" type="ColorRect" parent="."]
margin_right = 956.0
margin_bottom = 25.0
rect_min_size = Vector2( 492, 25 )
color = Color( 0.6, 0.6, 0.6, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 956.0
margin_bottom = 17.0
rect_min_size = Vector2( 492, 25 )
alignment = 2

[node name="sponsor" type="TextureButton" parent="HBoxContainer"]
margin_left = 684.0
margin_right = 708.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 24 )
texture_normal = ExtResource( 7 )
expand = true

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 712.0
margin_right = 716.0
margin_bottom = 25.0

[node name="refresh" type="TextureButton" parent="HBoxContainer"]
margin_left = 720.0
margin_right = 744.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 24 )
texture_normal = ExtResource( 5 )
expand = true

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
margin_left = 748.0
margin_right = 752.0
margin_bottom = 25.0

[node name="dock" type="TextureButton" parent="HBoxContainer"]
margin_left = 756.0
margin_right = 780.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 24 )
texture_normal = ExtResource( 3 )
expand = true

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
margin_left = 784.0
margin_right = 788.0
margin_bottom = 25.0

[node name="save_pos" type="TextureButton" parent="HBoxContainer"]
margin_left = 792.0
margin_right = 816.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 24 )
texture_normal = ExtResource( 2 )
expand = true

[node name="VSeparator4" type="VSeparator" parent="HBoxContainer"]
margin_left = 820.0
margin_right = 824.0
margin_bottom = 25.0

[node name="resnap" type="TextureButton" parent="HBoxContainer"]
margin_left = 828.0
margin_right = 852.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 24 )
texture_normal = ExtResource( 1 )
expand = true

[node name="VSeparator5" type="VSeparator" parent="HBoxContainer"]
margin_left = 856.0
margin_right = 860.0
margin_bottom = 25.0

[node name="settings" type="TextureButton" parent="HBoxContainer"]
margin_left = 864.0
margin_right = 888.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 24 )
texture_normal = ExtResource( 6 )
expand = true

[node name="VSeparator6" type="VSeparator" parent="HBoxContainer"]
margin_left = 892.0
margin_right = 896.0
margin_bottom = 25.0

[node name="clear" type="TextureButton" parent="HBoxContainer"]
margin_left = 900.0
margin_right = 924.0
margin_bottom = 25.0
rect_min_size = Vector2( 24, 24 )
texture_normal = ExtResource( 4 )
expand = true

[node name="VSeparator7" type="VSeparator" parent="HBoxContainer"]
margin_left = 928.0
margin_right = 932.0
margin_bottom = 25.0

[node name="quit" type="Button" parent="HBoxContainer"]
margin_left = 936.0
margin_right = 956.0
margin_bottom = 25.0
text = "X"

[node name="text_bg_color" type="ColorRect" parent="."]
margin_top = 29.0
margin_right = 956.0
margin_bottom = 196.0
color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_top = 29.0
margin_right = 956.0
margin_bottom = 196.0
focus_mode = 2
bbcode_enabled = true
bbcode_text = "[center][color=gray]---- kzCode_ Debugger ----[/color][/center]
"
text = "---- kzCode_ Debugger ----
"
scroll_following = true
selection_enabled = true
override_selected_font_color = true

[connection signal="pressed" from="HBoxContainer/sponsor" to="." method="_on_sponsor_pressed"]
[connection signal="pressed" from="HBoxContainer/refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="HBoxContainer/dock" to="." method="_on_dock_pressed"]
[connection signal="pressed" from="HBoxContainer/save_pos" to="." method="_on_save_pos_pressed"]
[connection signal="pressed" from="HBoxContainer/resnap" to="." method="_on_resnap_pressed"]
[connection signal="pressed" from="HBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="HBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="meta_clicked" from="RichTextLabel" to="." method="_on_RichTextLabel_meta_clicked"]
